deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kimai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: kimai-deploy
          image: 694397500817.dkr.ecr.us-east-1.amazonaws.com/kimai:latest
          ports:
          - containerPort: 8001
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 100Mi
