service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kimai-service
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - nodePort: 31479
      targetPort: 8001
