ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kimai-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: kimai-service
            port:
              number: 8001
